[TRIP-73] mytrips and saved trips API and its documentation added
